Backend: standardised error responses in controllers.
Frontend: fixed bug where edit and delete control buttons on sets/collections previews weren't being rendered for admins. Now they are always rendered, but only rendered for regular users if they created the item.

Other: updated github action to use a newer version of node due to dependency in package.json
